--- a/bambooPlugin/pom.xml
+++ b/bambooPlugin/pom.xml
@@ -10,8 +10,8 @@
     <version>1.0.0-SNAPSHOT</version>
 
     <organization>
-        <name>Example Company</name>
-        <url>http://www.example.com/</url>
+        <name>Mabl</name>
+        <url>http://www.mabl.com/</url>
     </organization>
 
     <name>bambooPlugin</name>
@@ -114,7 +114,7 @@
                         <Import-Package>
                             org.springframework.osgi.*;resolution:="optional",
                             org.eclipse.gemini.blueprint.*;resolution:="optional",
-                            *
+                            *;version="0";resolution:=optional
                         </Import-Package>
 
                         <!-- Ensure plugin is spring powered -->
