Internationalize the labels and hints

--- a/bambooPlugin/src/main/resources/i18n.properties
+++ b/bambooPlugin/src/main/resources/i18n.properties
@@ -2,5 +2,7 @@ mabl.task.help.link = https://help.mabl.com/v1.0/docs/triggering-tests-via-the-a
 mabl.task.help.title = Find out more
 
 createdeployment.restApiKey.label = Api Key
-createddeployment.environmentId.label = Environment Id (ends with -e)
-createddeployment.applicationId.label = Application Id (ends with -a)
+createdeployment.environmentId.label = Environment Id
+createdeployment.environmentId.hint = (should end with -e)
+createdeployment.applicationId.label = Application Id
+createdeployment.applicationId.hint = (should end with -a)
