--- a/src/main/resources/i18n.properties
+++ b/src/main/resources/i18n.properties
@@ -1,6 +1,6 @@
 mabl.task.help.link = https://help.mabl.com/v1.0/docs/triggering-tests-via-the-api
 mabl.task.help.title = Find out more
-mabl.task.output.prefix = [MABL] 
+mabl.task.output.prefix = [mabl]
 
 createdeployment.restApiKey.label = Api Key
 createdeployment.environmentId.label = Environment Id
