Make fields into MablConstants

--- a/src/main/resources/i18n.properties
+++ b/src/main/resources/i18n.properties
@@ -1,9 +1,6 @@
 mabl.task.help.link = https://help.mabl.com/v1.0/docs/triggering-tests-via-the-api
 mabl.task.help.title = Find out more
-mabl.task.output.prefix = [mabl]
 
-createdeployment.restApiKey.label = Api Key
-createdeployment.environmentId.label = Environment Id
-createdeployment.environmentId.hint = (should end with -e)
-createdeployment.applicationId.label = Application Id
-createdeployment.applicationId.hint = (should end with -a)
+createdeployment.restapikey.label = Api Key
+createdeployment.environmentid.label = Environment Id
+createdeployment.applicationid.label = Application Id
