Add textarea to accept plan_tags in json [[]] form

--- a/src/main/resources/i18n.properties
+++ b/src/main/resources/i18n.properties
@@ -4,3 +4,4 @@ mabl.task.help.title = Find out more
 createdeployment.restapikey.label = Api Key
 createdeployment.environmentid.label = Environment Id
 createdeployment.applicationid.label = Application Id
+createdeployment.plantags.label = Plan Tags
