[WIP] Things work, but needs tests and cleanup

--- a/src/main/resources/i18n.properties
+++ b/src/main/resources/i18n.properties
@@ -2,6 +2,10 @@ mabl.task.help.link = https://help.mabl.com/v1.0/docs/triggering-tests-via-the-a
 mabl.task.help.title = Find out more
 
 createdeployment.restapikey.label = Api Key
-createdeployment.environmentid.label = Environment Id
-createdeployment.applicationid.label = Application Id
+createdeployment.uri.label = Uri
+createdeployment.customuri.label = Define New Uri
+createdeployment.environment.label = Environment
+createdeployment.customenvironment.label = Create New Environment
+createdeployment.application.label = Application
+createdeployment.customapplication.label = Create New Application
 createdeployment.plantags.label = Plan Tags
