--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.mabl.bamboo</groupId>
     <artifactId>bamboo-plugin</artifactId>
-    <version>0.0.5-SNAPSHOT</version>
+    <version>0.0.6-SNAPSHOT</version>
 
     <organization>
         <name>mabl</name>
@@ -25,8 +25,8 @@
     <packaging>atlassian-plugin</packaging>
 
     <properties>
-        <bamboo.version>6.7.2</bamboo.version>
-        <bamboo.data.version>6.7.2</bamboo.data.version>
+        <bamboo.version>6.3.2</bamboo.version>
+        <bamboo.data.version>6.3.2</bamboo.data.version>
         <amps.version>6.3.15</amps.version>
         <plugin.testrunner.version>1.2.3</plugin.testrunner.version>
         <atlassian.spring.scanner.version>1.2.13</atlassian.spring.scanner.version>
@@ -66,7 +66,7 @@
             <version>1</version>
             <scope>provided</scope>
         </dependency>
-        
+
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
@@ -145,7 +145,10 @@
                         <Import-Package>
                             org.springframework.osgi.*;resolution:="optional",
                             org.eclipse.gemini.blueprint.*;resolution:="optional",
-                            *;version="0";resolution:=optional
+                            javax.ws.rs*;version="[1,2)",
+                            javax.servlet*;version="2.5",
+                            javax.xml.bind*;version="[2.1,3)",
+                            *;version="0";resolution:="optional"
                         </Import-Package>
 
                         <!-- Ensure plugin is spring powered -->
