--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
     <scm>
         <url>https://github.com/mablhq/bamboo-plugin.git</url>
         <connection>scm:git:git@github.com:mablhq/bamboo-plugin.git</connection>
+        <developerConnection>scm:git:git@github.com:mablhq/bamboo-plugin.git</developerConnection>
         <tag>bamboo-plugin-0.0.6</tag>
     </scm>
 
