--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.mabl.bamboo</groupId>
     <artifactId>bamboo-plugin</artifactId>
-    <version>0.0.6</version>
+    <version>0.0.7</version>
 
     <organization>
         <name>mabl</name>
@@ -16,7 +16,7 @@
         <url>https://github.com/mablhq/bamboo-plugin.git</url>
         <connection>scm:git:git@github.com:mablhq/bamboo-plugin.git</connection>
         <developerConnection>scm:git:git@github.com:mablhq/bamboo-plugin.git</developerConnection>
-        <tag>bamboo-plugin-0.0.6</tag>
+        <tag>bamboo-plugin-0.0.7</tag>
     </scm>
 
     <name>mabl deployment</name>
@@ -144,7 +144,7 @@
                         <Import-Package>
                             org.springframework.osgi.*;resolution:="optional",
                             org.eclipse.gemini.blueprint.*;resolution:="optional",
-                            javax.servlet*;version="2.5",
+                            javax.servlet*;version="2.5";resolution:="optional",
                             *;version="0";resolution:="optional"
                         </Import-Package>
 
