Add labels support

--- a/src/main/resources/i18n.properties
+++ b/src/main/resources/i18n.properties
@@ -2,5 +2,6 @@ mabl.task.help.link = https://help.mabl.com/v1.0/docs/triggering-tests-via-the-a
 mabl.task.help.title = Find out more
 
 createdeployment.restapikey.label = Api Key
-createdeployment.environmentid.label = Environment Id
-createdeployment.applicationid.label = Application Id
+createdeployment.applicationid.label = Application
+createdeployment.environmentid.label = Environment
+createdeployment.planlabels.label = Labels
