--- a/src/main/resources/i18n.properties
+++ b/src/main/resources/i18n.properties
@@ -1,7 +1,7 @@
 mabl.task.help.link = https://help.mabl.com/v1.0/docs/triggering-tests-via-the-api
 mabl.task.help.title = Find out more
 
-createdeployment.restapikey.label = Api Key
+createdeployment.restapikey.label = API Key
 createdeployment.applicationid.label = Application
 createdeployment.environmentid.label = Environment
 createdeployment.planlabels.label = Labels
