Refactor REST client and get things working

--- a/src/main/resources/i18n.properties
+++ b/src/main/resources/i18n.properties
@@ -5,3 +5,6 @@ createdeployment.restapikey.label = API Key
 createdeployment.applicationid.label = Application
 createdeployment.environmentid.label = Environment
 createdeployment.planlabels.label = Labels
+createdeployment.proxyaddress.label = Proxy server
+createdeployment.proxyusername.label = Proxy username
+createdeployment.proxypassword.label = Proxy password
