--- a/src/main/resources/i18n.properties
+++ b/src/main/resources/i18n.properties
@@ -4,7 +4,8 @@ mabl.task.help.title = Find out more
 createdeployment.restapikey.label = API Key
 createdeployment.applicationid.label = Application
 createdeployment.environmentid.label = Environment
-createdeployment.planlabels.label = Labels
+createdeployment.planlabels.label = Plan labels
+createdeployment.mablBranch.label = mabl Branch
 createdeployment.proxyaddress.label = Proxy server
 createdeployment.proxyusername.label = Proxy username
 createdeployment.proxypassword.label = Proxy password
