Added description to configurable fields

--- a/src/main/resources/i18n.properties
+++ b/src/main/resources/i18n.properties
@@ -2,10 +2,20 @@ mabl.task.help.link = https://help.mabl.com/v1.0/docs/triggering-tests-via-the-a
 mabl.task.help.title = Find out more
 
 createdeployment.restapikey.label = API Key
+createdeployment.restapikey.description = The mabl API key of your workspace. Enter a key here to see the Application and Environment dropdowns to be populated.
 createdeployment.applicationid.label = Application
+createdeployment.applicationid.description = The application to trigger. Either an application, an environment, or both must be specified. 
 createdeployment.environmentid.label = Environment
+createdeployment.environmentid.description = The environment to execute tests in. Either an application, an environment, or both must be specified. 
 createdeployment.planlabels.label = Plan labels
-createdeployment.mablBranch.label = mabl Branch
+createdeployment.planlabels.description = The plan labels to include in the test runs. If none is selected, any plan in the selected application or environment will be kicked off.
+createdeployment.planlabels.clear = clear labels
+createdeployment.mablBranch.label = Test branch
+createdeployment.mablBranch.description = Select the test branch for execution.
 createdeployment.proxyaddress.label = Proxy server
+createdeployment.proxyaddress.description = The hostname of the proxy server.
+createdeployment.proxy.settings = Optional proxy settings
 createdeployment.proxyusername.label = Proxy username
+createdeployment.proxyusername.description = The username to authenticate to the proxy server.
 createdeployment.proxypassword.label = Proxy password
+createdeployment.proxypassword.description = The password of the proxy user.
