--- a/src/main/resources/i18n.properties
+++ b/src/main/resources/i18n.properties
@@ -2,11 +2,11 @@ mabl.task.help.link = https://help.mabl.com/v1.0/docs/triggering-tests-via-the-a
 mabl.task.help.title = Find out more
 
 createdeployment.restapikey.label = API Key
-createdeployment.restapikey.description = The mabl API key of your workspace. Enter a key here to see the Application and Environment dropdowns to be populated.
+createdeployment.restapikey.description = The mabl API key of your workspace.
 createdeployment.applicationid.label = Application
-createdeployment.applicationid.description = The application to trigger. Either an application, an environment, or both must be specified. 
+createdeployment.applicationid.description = The application to trigger. Either an application, an environment, or both must be specified.
 createdeployment.environmentid.label = Environment
-createdeployment.environmentid.description = The environment to execute tests in. Either an application, an environment, or both must be specified. 
+createdeployment.environmentid.description = The environment to execute tests in. Either an application, an environment, or both must be specified.
 createdeployment.planlabels.label = Plan labels
 createdeployment.planlabels.description = The plan labels to include in the test runs. If none is selected, any plan in the selected application or environment will be kicked off.
 createdeployment.planlabels.clear = clear labels
