--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -14,7 +14,8 @@ jobs:
       - uses: actions/checkout@main
       - uses: actions/setup-java@v2
         with:
-          java-version: '8.x'
+          distribution: 'zulu'
+          java-version: '8'
           java-package: jdk
           architecture: x64
 
